Continued to implement reminder functionality.
Added required libraries for date picker and time picker. This includes jquery-mousewheel, globalize, jquery-ui and some images for the widgets.

Added createReminder and getReminder methods to ChannelAPI.
Added UTF-8 encoding to OutputStreams in ChannelAPI and ModeratorAPI.

Added three actions and implemented them: CreateOrEditReminderAction, LoadCreateReminderDialogAction, LoadEditReminderAction.
In CreateOrEditReminderAction is the implementation of the editing process still missing.

Minor changes in CreateOrEditChannelAction and LoadRemindersAction.

Updated mappings in RequestDispatcher and ActionFactory to support the new functionality.

Added some constants.

Minor changes in FrontController.

announcements.jsp, createChannel.jsp, myChannels.jsp: Minor changes (close tag, formatting, ...)

Added references to new libraries in header.jsp.

Created createReminder.jsp and editReminder.jsp

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -122,7 +122,9 @@ general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Si
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
 general.message.error.channelNotFound = Der Kanal wurde nicht gefunden. Bitte laden Sie die Kanalressourcen neu. Es \
-  kann sein der Kanal wurde gelöscht und besitzt keine Repräsentation mehr auf dem Server.
+  kann sein, dass der Kanal gelöscht wurde und keinen Repräsentanten mehr auf dem Server besitzt.
+general.message.error.reminderNotFound = Der Reminder wurde nicht gefunden. Bitte laden Sie die Reminderressourcen neu\
+  . Es kann sein, dass der Reminder gelöscht wurde und keinen Repräsentanten mehr auf dem Server besitzt.
 general.message.error.channelDataIncomplete = Es fehlen Daten, die für die Aktion auf dem Kanal notwendig sind. Bitte\
    prüfen Sie Ihre Eingaben.
 general.message.error.moderatorNotFound = Der angegebene Moderator konnte nicht gefunden werden.
@@ -443,3 +445,49 @@ reminder.interval.xWeeks = Sende Reminder jede {0}. Woche.
 reminder.interval.once = Sende Reminder einmalig.
 reminder.interval.invalid = Das Reminderinterval ist ungültig.
 reminder.notfound = Die angegebene Reminderressource konnte nicht gefunden werden.
+
+createReminder.title = Reminder anlegen
+createReminder.info = Ein Reminder sendet Benachrichtigungen automatisch in einem von Ihnen angegebenen Intervall. \
+  Hier können Sie einen neuen Reminder anlegen. Geben Sie die erforderlichen Daten an. Alle Felder sind Pflichtfelder\
+  . Es gibt unterschiedliche Arten von Remindern. Es gibt Reminder, die nur einmalig feuern und es gibt Reminder, die\
+   entweder wöchentlich oder in einem spezifisch definierten Intervall feuern. Sie können angeben, wann der Reminder \
+  starten soll und ab welchem Datum keine weiteren Benachrichtigungen zu senden sind.
+reminder.general.panel.startDate = Startdatum
+reminder.general.panel.endDate = Enddatum
+reminder.general.panel.time = Uhrzeit
+reminder.general.panel.interval.desc = Bitte geben Sie das Intervall an, in dem Benachrichtigungen versandt werden \
+  sollen.
+reminder.general.panel.intervaltype = Intervalltyp
+reminder.general.panel.intervaltype.daily = Täglich
+reminder.general.panel.intervaltype.weekly = Wöchentlich
+reminder.general.panel.intervaltype.oneTime = Einmalig
+reminder.general.panel.interval.labelDaily = In Tagen
+reminder.general.panel.interval.labelWeekly = In Wochen
+reminder.general.panel.interval.labelOneTime = Keine Wiederholung
+reminder.general.panel.message.desc = Bitte geben Sie die Benachrichtigung an, die vom Reminder versandt werden soll.
+createReminder.submitButton.label = Reminder anlegen
+
+reminder.validation.error.dateNotSet = Eines der angegebenen Daten ist nicht gesetzt oder entspricht nicht dem \
+  erwarteten Format. Bitte prüfen Sie Ihre Eingabe.
+reminder.validation.error.titleNotSet = Der Titel der zu sendenden Benachrichtigung ist nicht gesetzt. Bitte geben \
+  Sie einen Titel an.
+reminder.validation.error.textNotSet = Der Text der zu sendenden Benachrichtigung ist nicht gesetzt. Bitte geben Sie \
+  einen Text an.
+reminder.validation.error.titleTooLong = Der angegebene Titel überschreitet die maximal zulässige Länge von 45 Zeichen.
+reminder.validation.error.textTooLong = Der angegebene Text überschreitet die maximal zulässige Länge von 500 Zeichen.
+reminder.validation.error.startDateAfterEndDate = Das angegebene Startdatum ist nach dem angegebenen Enddatum.
+reminder.validation.error.endDateNotInFuture = Das angegebene Enddatum liegt in der Vergangenheit.
+reminder.validation.error.needsToBeOneTime = Start- und Enddatum sind identisch. Es muss deshalb ein einmaliger \
+  Reminder sein.
+reminder.validation.error.intervalInvalidFormat = Es wurde ein ungültiges Intervall-Format angegeben. Bitte wenden \
+  Sie sich an einen Administrator.
+reminder.validation.error.intervalOutOfRange = Das angegebene Intervall liegt außerhalb des gültigen Bereichs. Bitte \
+  wenden Sie sich an einen Administrator.
+reminder.validation.error.generalError = Der Server hat die Anfrage abgelehnt. Bitte prüfen Sie nochmals Ihre \
+  Eingaben. Falls die Aktion weiterhin nicht funktioniert, kontaktieren Sie einen Administrator.
+
+editReminder.title = Bearbeite Reminder
+editReminder.info = Es ist möglich, die Konfiguration eines Reminders zu ändern. Die aktuelle Konfiguration ist im \
+  folgenden Dialog zu sehen. Sie können einzelne Felder nach Ihren Wünschen bearbeiten. Stellen Sie dabei aber \
+  sicher, alle notwendigen Daten des Reminders bereitzustellen.
+editReminder.submitButton.label = Speichere Änderungen
