Added edit reminder functionality.
Added updateReminder method in ChannelAPI.
Added corresponding edit methods to CreteOrEditReminderAction. Added support for ignore flag in LoadRemindersAction.
Updated RequestDispatcher and ActionFactory methods.
Changed type of active field in reminder from boolean to Boolean.
Added ignore field in reminders.jsp and no update warning in editReminder.jsp

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -445,6 +445,10 @@ reminder.interval.xWeeks = Sende Reminder jede {0}. Woche.
 reminder.interval.once = Sende Reminder einmalig.
 reminder.interval.invalid = Das Reminderinterval ist ungültig.
 reminder.notfound = Die angegebene Reminderressource konnte nicht gefunden werden.
+reminder.skipNextEventFlag = Überspringe nächsten Reminder-Termin
+reminder.skipNextEventFlag.yes = Der nächste Termin des Reminder wird übersprungen. Die Anzeige des nächsten Termins \
+  wurde entsprechend aktualisiert.
+reminder.skipNextEventFlag.no = Das Flag ist aktuell nicht gesetzt.
 
 createReminder.title = Reminder anlegen
 createReminder.info = Ein Reminder sendet Benachrichtigungen automatisch in einem von Ihnen angegebenen Intervall. \
@@ -491,3 +495,5 @@ editReminder.info = Es ist möglich, die Konfiguration eines Reminders zu ändern.
   folgenden Dialog zu sehen. Sie können einzelne Felder nach Ihren Wünschen bearbeiten. Stellen Sie dabei aber \
   sicher, alle notwendigen Daten des Reminders bereitzustellen.
 editReminder.submitButton.label = Speichere Änderungen
+editReminder.noUpdate.warning = Die Daten des Reminder haben sich nicht geändert. Es wird keine Aktualisierung \
+  durchgeführt.
