Continued to implement reminder related functionality.
Added two methods to ChannelAPI: changeActiveStatusOfReminder and changeIgnoreFlagOfReminder.
Removed the ignore flag related functionality from the CreateOrEditReminderAction and placed it seperately in RemindersAction.
Added functionality for activating/deactivating reminder and set/reset of ignore flag in RemindersAction.
Added modal dialogs and buttons for this kind of functionality to the reminders.jsp view. Added icons to represent the status of a reminder.

Changed icons in manageChannelModerators.jsp.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -427,6 +427,19 @@ reminders.nodata.info = In diesem Kanal gibt es keine Reminder.
 reminders.delete.success = Der Reminder "{0}" wurde gelöscht.
 reminders.create.text = Möchten Sie einen neuen Reminder anlegen?
 reminders.create.button = Reminder erstellen
+reminders.warning.deactivation = Wollen Sie wirklich den Reminder "{0}" deaktivieren? Der Reminder wird dann keine \
+  Benachrichtigungen mehr senden.
+reminders.warning.activation = Wollen Sie den Reminder "{0}" wieder aktivieren? Der Reminder sendet dann wieder \
+  Benachrichtigungen im festgelegten Intervall.
+reminders.button.activate = Aktivieren
+reminders.button.deactivate = Deaktivieren
+reminders.activation.success = Der Reminder ist nun wieder aktiv.
+reminders.deactivation.success = Der Reminder wurde deaktviert.
+reminders.warning.skipNextEvent.set = Wollen Sie den nächsten Termin des Reminder "{0}" überspringen? Wenn dieses Flag \
+  gesetzt ist, dann wird beim nächsten Termin keine Benachrichtigung versandt. Das Flag wird automatisch zurückgesetzt.
+reminders.warning.skipNextEvent.reset = Wollen Sie das Flag für den Reminder "{0}" manuell zurücksetzen?
+reminders.button.resetIgnoreFlag = Überspringen zurücksetzen
+reminders.button.setIgnoreFlag = Überspringe nächsten Termin
 
 reminder.title = Title
 reminder.text = Text
@@ -449,6 +462,8 @@ reminder.skipNextEventFlag = Überspringe nächsten Reminder-Termin
 reminder.skipNextEventFlag.yes = Der nächste Termin des Reminder wird übersprungen. Die Anzeige des nächsten Termins \
   wurde entsprechend aktualisiert.
 reminder.skipNextEventFlag.no = Das Flag ist aktuell nicht gesetzt.
+reminder.deactivated = Der Reminder ist deaktiviert. Es werden keine Benachrichtigungen versandt.
+reminder.expired.short = (abgelaufen)
 
 createReminder.title = Reminder anlegen
 createReminder.info = Ein Reminder sendet Benachrichtigungen automatisch in einem von Ihnen angegebenen Intervall. \
