Updates on the jsp pages. Mainly due to structuring purposes or to correct errors such as missing close tags, etc. Corrected some mistakes which were indicated by the W3C validation tool.
Adjusted german and english texts on index.jsp, i.e. on the start page.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -19,19 +19,27 @@ index.text.app.windowsPhone = Laden Sie die Windows Phone App vom Windows Store.
 index.button.app.windowsPhone = Windows Phone App herunterladen
 index.text.loggedIn = Sie sind eingeloggt als:
 index.about.title = Was ist University News Ulm?
-index.about.text1 = University News Ulm (UNU) ist ein Projekt das im Rahmen des Anwendungsfachs Advanced Mobile \
+index.about.text1 = University News Ulm (UNU) ist ein Projekt, das im Rahmen des Anwendungsfachs Advanced Mobile \
   Application Engineering am Institut für Datenbanken und Informationssysteme an der Universität Ulm entstanden ist.
-index.about.text2 = Die Grundaufgabe von UNU ist es, Informationen zu einem bestimmten Thema zu verbreiten. Dazu \
+index.about.text2 = Das generelle Ziel von UNU ist es, Informationen zu einem bestimmten Thema zu verbreiten. Dazu \
   sollen unterschiedliche Kanäle, die über unterschiedliche Themen benachrichtigen, abonniert werden können. \
-  Ein solcher Kanal kann zum Beispiel über Neuigkeiten wie eine Raumänderung einer Vorlesung benachrichtigen oder an \
-  Bevorstehendes wie den VVK einer Uniparty erinnern.
+  Ein solcher Kanal kann zum Beispiel über Neuigkeiten bezüglich einer Vorlesung informieren. Das kann die \
+  Benachrichtigung über eine kurzfristige Raumänderung umfassen, oder die Ankündigung neuer Übungsblätter und die \
+  Erinnerung an deren Abgabe. Kanäle können beliebige Themen abdecken und so beispielsweise auch über einen \
+  bevorstehenden VVK von Karten einer Uniparty informieren.
 index.about.text3 = Der Web Client dient der Administration und Verwaltung von Kanälen. Die Moderatoren eines Kanals \
-  können so z. B. neue Kanalnachrichten erstellen. Mit Hilfe der Apps können die Endnutzern (Studenten) Kanäle \
-  abonnieren und Nachrichten empfangen. Moderatoren haben die Möglichkeit Kanäle auch mit Hilfe der App zu verwalten.
-index.about.text4 = Des Weiteren ermöglichen die Apps die Erstellung von verschiedenen Gruppen. Grundfunktion einer \
-  Gruppe ist es, einen in sich geschlossenen Bereich zu schaffen, in dem sich die Mitglieder dieser Gruppe \
-  austauschen und organisieren können. Innerhalb von Gruppen soll es möglich sein zu chatten, Konversationen über \
-  bestimmten Themen zu erstellen und Abstimmungen durchzuführen.
+  können so z.B. neue Kanalnachrichten erstellen und Reminder konfigurieren. Moderatoren haben die Möglichkeit Kanäle \
+  auch mit Hilfe der UNU App zu verwalten, mittels des Web Client können einige der Aufgaben jedoch einfacher \
+  umgesetzt werden.
+index.about.text4 = Mit Hilfe der Apps können die Endnutzer (Studenten) Kanäle abonnieren und Nachrichten empfangen. \
+  Die Verteilung von Informationen ermöglicht es den Nutzern, sich über die Themen auf dem Laufenden zu halten, die \
+  für sie von Interesse sind. Die Apps ermöglichen eine feingranulare Konfiguration des Benachrichtigungsverhaltens \
+  der Anwendung, so dass der Nutzer einstellen kann, über welche Benachrichtigungen er informiert werden möchte. Das \
+  Ziel ist die Bereitstellung der Informationen auf eine Art und Weise, die es weniger wahrscheinlich macht, dass \
+  wichtige Dinge verpasst werden. Des Weiteren ermöglichen die Apps die Erstellung von verschiedenen Gruppen. \
+  Grundfunktion einer Gruppe ist es, einen in sich geschlossenen Bereich zu schaffen, in dem sich die Mitglieder \
+  dieser Gruppe austauschen und organisieren können. Innerhalb von Gruppen soll es möglich sein zu chatten, \
+  Konversationen über bestimmten Themen zu erstellen und Abstimmungen durchzuführen.
 index.about.text5 = Das UNU-System besteht aus diesem Web Client, einem dazugehörigen REST Server sowie einer Android \
   und einer Windows Phone App. Alle diese Komponenten wurden von Matthias Mak und Philipp Speidel entwickelt. Betreuer \
   des Projekts ist Marc Schickler.
