Added admin permissions check in FrontController. Added error cases handling in FrontController: Now handles error codes ConnectionFailure, DatabaseFailure, UserForbidden, ModeratorForbidden, ModeratorUnauthorized and EmailFailure in ServerException catch block. Modified error pages to show some more details about the error.
Updated some of the actions where the requiresSession or requiresAdminPermissions was not set correctly.

Added base URL on paths to js and css files in header.jsp.
Added a picture for 404 errors.
Added lots of error strings in text properties.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -120,15 +120,22 @@ register.info.emailFailure = Der Accountantrag wurde erfogreich empfangen und ge
   allerdings keine Bestätigungsemail an die angegebene Adresse senden. Bitte prüfen Sie, ob die Adresse richtig \
   angegeben ist.
 
-general.message.error.connectionFailure = Die Anfrage ist fehlgeschlagen, da der Server nicht erreicht werden konnte.\
-   Bitte versuchen Sie es später nochmal.
+general.message.error.connectionFailure = Die Anfrage ist fehlgeschlagen, da der Server nicht erreicht werden konnte.
+general.message.error.connectionFailure.desc = Es scheint ein Problem bezüglich des Servers zu geben. Die Anfrage an \
+  den Server war nicht erfolgreich. Der Server ist nicht zu erreichen oder antwortet nicht. Bitte versuchen Sie es \
+  später erneut. Falls das Problem weiterhin besteht, wenden Sie sich an einen Administrator.
 general.message.error.failed = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.sessionExpired = Ihre Session ist aufgrund langer Inaktivität abgelaufen. Bitte melden Sie sich \
   neu an.
 general.message.error.requiresLogin = Sie müssen sich anmelden, um die gewünschte Funktionalität ausführen zu können.
-general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
+general.message.error.fatal = Fatal Error! Die Anfrage ist fehlgeschlagen.
+general.message.error.fatal.noDesc = Es gibt keine detaillierte Fehlerbeschreibung. Das tut uns leid.
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
+general.message.error.notFound.desc = Sie haben eine Ressource angefragt, die auf dem Server nicht gefunden werden \
+  konnte. Bitte prüfen Sie Ihre Anfrage, insbesondere Ihre URL.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
+general.message.error.forbidden.noDesc = Bitte prüfen Sie Ihre Berechtigungen. Wenn Sie glauben, dass Sie die \
+  erforderlichen Rechte für diese Aktion besitzen müssten, dann kontaktieren Sie bitte einen Administrator.
 general.message.error.channelNotFound = Der Kanal wurde nicht gefunden. Bitte laden Sie die Kanalressourcen neu. Es \
   kann sein, dass der Kanal gelöscht wurde und keinen Repräsentanten mehr auf dem Server besitzt.
 general.message.error.reminderNotFound = Der Reminder wurde nicht gefunden. Bitte laden Sie die Reminderressourcen neu\
@@ -138,6 +145,19 @@ general.message.error.channelDataIncomplete = Es fehlen Daten, die für die Aktio
 general.message.error.moderatorNotFound = Der angegebene Moderator konnte nicht gefunden werden.
 general.message.error.databaseFailure = Es ist ein Fehler beim Zugriff auf die Datenbank aufgetreten. Bitte versuchen\
    Sie es erneut. Wenn der Fehler weiter besteht kontaktieren Sie bitte einen Administrator.
+general.message.error.moderatorUnauthorized = Der Server konnte den Anfrager nicht authentifizieren. Bitte stellen \
+  Sie sicher, dass Sie richtig im System angemeldet sind. Führen Sie den Anmeldevorgang erneut aus. Wenn das Problem \
+  weiterhin besteht, kontaktieren Sie einen Administrator.
+general.message.error.userForbidden = Diese Aktion kann nicht von einem Nutzer des Systems ausgeführt werden. Diese \
+  Aufgabe erfordert Moderatoren- oder Administratorenrechte. Der Server hat Sie als Nutzer des Systems identifiziert \
+  und die Anfrage abgelehnt.
+general.message.error.moderatorForbidden = Die Aktion kann nicht von einem Moderator des Systems ausgeführt werden. \
+  Diese Aktion ist entweder normalen Nutzern vorbehalten oder erfordert Administratorrechte. Sie haben zu diesem \
+  Zeitpunkt nicht die erforderlichen Rechte, um diese Aktion auszuführen.
+general.message.error.emailFailure = Es scheint ein Problem mit der Email-Komponente unseres Servers zu geben. Der \
+  Server war nicht dazu in der Lage, eine Mail an die hinterlegte Adresse zu senden. Das hätte nicht passieren dürfen \
+  . Wir bitten um Entschuldigung!
+
 general.alert.success = Erfolgreich!
 general.alert.success.info = Aktion erfolgreich ausgeführt.
 general.alert.failure = Fehlgeschlagen!
