Changed some date related things. This was done especially for reminder handling.
Set default time zone to Europe/Berlin in Constants. Dates in web client should always be considered to be defined relating to this time zone.

Adjusted method retrieveLocale() in RequestContextManager to fix some bugs. A problem occurred when reloading the reminder pages choosing another language using the nav bar. The new locale was set in the jsp, but the servlets are executed before the jsp is loaded. Adjusted the method to take the language parameter into account if it is set. This fixes the problem.

Adjusted createReminder.jsp and editReminder.jsp. Fixed some issue that appeared in Edge browser. Locale handling is a problem if the browser sets the locale using the accept parameter (or language paramere) from the request. In edge, this is de_DE instead of just de. Added some additional cases to represent this. Fallback is to choose english as default language.
Furthermore set autocomplete to off for date related input fields.

The locale related problems were also considered in the action instances. Changed implementation of CreateOrEditReminderAction and LoadEditReminderAction. Now checks for different locales, e.g. Locale.GERMAN and Locale.GERMANY. Added default case with english language.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -496,9 +496,10 @@ reminder.expired.short = (abgelaufen)
 createReminder.title = Reminder anlegen
 createReminder.info = Ein Reminder sendet Benachrichtigungen automatisch in einem von Ihnen angegebenen Intervall. \
   Hier können Sie einen neuen Reminder anlegen. Geben Sie die erforderlichen Daten an. Alle Felder sind Pflichtfelder\
-  . Es gibt unterschiedliche Arten von Remindern. Es gibt Reminder, die nur einmalig feuern und es gibt Reminder, die\
-   entweder wöchentlich oder in einem spezifisch definierten Intervall feuern. Sie können angeben, wann der Reminder \
-  starten soll und ab welchem Datum keine weiteren Benachrichtigungen zu senden sind.
+  . Es gibt unterschiedliche Arten von Remindern. Es gibt Reminder, die nur einmalig feuern und es gibt Reminder, die \
+  entweder wöchentlich oder in einem spezifisch definierten Intervall feuern. Sie können angeben, wann der Reminder \
+  starten soll und ab welchem Datum keine weiteren Benachrichtigungen zu senden sind. Die hier konfigurierte Uhrzeit \
+  bezieht sich immer auf die Zeitzone Europe/Berlin.
 reminder.general.panel.startDate = Startdatum
 reminder.general.panel.endDate = Enddatum
 reminder.general.panel.time = Uhrzeit
@@ -536,7 +537,8 @@ reminder.validation.error.generalError = Der Server hat die Anfrage abgelehnt. B
 editReminder.title = Bearbeite Reminder
 editReminder.info = Es ist möglich, die Konfiguration eines Reminders zu ändern. Die aktuelle Konfiguration ist im \
   folgenden Dialog zu sehen. Sie können einzelne Felder nach Ihren Wünschen bearbeiten. Stellen Sie dabei aber \
-  sicher, alle notwendigen Daten des Reminders bereitzustellen.
+  sicher, alle notwendigen Daten des Reminders bereitzustellen. Die hier konfigurierte Uhrzeit bezieht sich immer auf \
+  die Zeitzone Europe/Berlin.
 editReminder.submitButton.label = Speichere Änderungen
 editReminder.noUpdate.warning = Die Daten des Reminder haben sich nicht geändert. Es wird keine Aktualisierung \
   durchgeführt.
